trying to move icons to no avail

--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
       </div>
     </section>
 
-    <section class="ordering py-5 d-flex justify-content-between">
+    <section class="ordering py-5">
       <div class="container">
-        <div class="row d-flex justify-content-around">
+        <div class="row">
           <div class="col-lg-4">
             <div class="box p-3 mb-3">
               <i class="fa-solid fa-basket-shopping"></i>
-
               <div class="text">
                 <h3>E-Commerce</h3>
                 <p>
@@ -85,7 +84,6 @@
           <div class="col-lg-4">
             <div class="box p-3 mb-3">
               <i class="fa-solid fa-basket-shopping"></i>
-
               <div class="text">
                 <h3>E-Commerce</h3>
                 <p>
@@ -98,14 +96,13 @@
           <div class="col-lg-4">
             <div class="box p-3 mb-3">
               <i class="fa-solid fa-basket-shopping"></i>
-
-              <div class="text">
-                <h3>E-Commerce</h3>
-                <p>
-                  Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+            </div>
+            <div class="text">
+              <h3>E-Commerce</h3>
+              <p>
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum.
+              </p>
             </div>
           </div>
         </div>
