Add basic disaster

--- a/index.html
+++ b/index.html
@@ -105,9 +105,133 @@
                 </p>
               </div>
             </div>
-          
+          </div>
         </div>
       </div>
+    </section>
+    <section class="portfolio">
+      <div class="container">
+        <div class="row">
+          <h1>OUR PORTFOLIO</h1>
+          <p class="p-services">Proin iaculis purus consequat sem cure.</p>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="card">
+                  <img
+                    src="https://images.pexels.com/photos/53874/pexels-photo-53874.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    class="card-img-top"
+                    alt="Waterfall"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Ebony and Ivory</h5>
+                    <p class="card-text">Branding</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 d-none d-lg-block">
+                <div class="card">
+                  <img
+                    src="https://images.pexels.com/photos/4068294/pexels-photo-4068294.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    class="card-img-top"
+                    alt="Sunset Over the Sea"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Smart Stationary</h5>
+                    <p class="card-text">Print Design</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 d-none d-lg-block">
+                <div class="card">
+                  <img
+                    src="https://images.pexels.com/photos/1018134/pexels-photo-1018134.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    class="card-img-top"
+                    alt="Sunset over the Sea"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Clever Poster</h5>
+                    <p class="card-text">Print Design</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="card">
+                  <img
+                    src="https://images.pexels.com/photos/8971020/pexels-photo-8971020.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    class="card-img-top"
+                    alt="Waterfall"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Ebony and Ivory</h5>
+                    <p class="card-text">Branding</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 d-none d-lg-block">
+                <div class="card">
+                  <img
+                    src="https://images.pexels.com/photos/4067759/pexels-photo-4067759.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    class="card-img-top"
+                    alt="Sunset Over the Sea"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Smart Stationary</h5>
+                    <p class="card-text">Print Design</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 d-none d-lg-block">
+                <div class="card">
+                  <img
+                    src="https://images.pexels.com/photos/8533218/pexels-photo-8533218.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    class="card-img-top"
+                    alt="Sunset over the Sea"
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Clever Poster</h5>
+                    <p class="card-text">Print Design</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <footer>
+        <div class="container">
+          <div class="row d-flex justify-content-between">
+            <div class="col-md-4">
+              <p>&copy; Copyrights 2014</p>
+            </div>
+            <div class="col-md-6">
+              <ul class="list-inline">
+                <li class="list-inline-item">
+                  <a href="https://pl-pl.facebook.com/">
+                    <i class="fa-brands fa-twitter"></i>o</a
+                  >
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://pl-pl.facebook.com/"
+                    ><i class="fa-brands fa-twitter" alt="twitter"></i>o</a
+                  >
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://pl-pl.facebook.com/"
+                    ><i class="fa-brands fa-twitter" alt="twitter"></i>o</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
