--- a/index.html
+++ b/index.html
@@ -206,26 +206,26 @@
     <section class="footer">
       <footer>
         <div class="container">
-          <div class="row d-flex justify-content-between">
-            <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-4 justify-content-around d-flex para">
               <p>&copy; Copyrights 2014</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4 d-flex">
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="https://pl-pl.facebook.com/">
-                    <i class="fa-brands fa-twitter"></i>o</a
-                  >
+                  <a href="https://pl-pl.facebook.com/" aria-label="Facebook">
+                    <i class="fa-brands fa-twitter"></i
+                  ></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://pl-pl.facebook.com/"
-                    ><i class="fa-brands fa-twitter" alt="twitter"></i>o</a
-                  >
+                  <a href="https://pl-pl.facebook.com/" aria-label="Facebook"
+                    ><i class="fa-brands fa-twitter" alt="twitter"></i
+                  ></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://pl-pl.facebook.com/"
-                    ><i class="fa-brands fa-twitter" alt="twitter"></i>o</a
-                  >
+                  <a href="https://pl-pl.facebook.com/" aria-label="Facebook"
+                    ><i class="fa-brands fa-twitter" alt="twitter"></i
+                  ></a>
                 </li>
               </ul>
             </div>
