--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <div class="box p-3 mb-3">
+            <div class="box p-3 mb-3 d-flex align-items-center flex-column">
               <i class="fa-solid fa-basket-shopping"></i>
               <div class="text">
                 <h3>E-Commerce</h3>
@@ -82,7 +82,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="box p-3 mb-3">
+            <div class="box p-3 mb-3 d-flex align-items-center flex-column">
               <i class="fa-solid fa-basket-shopping"></i>
               <div class="text">
                 <h3>E-Commerce</h3>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="box p-3 mb-3">
+            <div class="box p-3 mb-3 d-flex align-items-center flex-column">
               <i class="fa-solid fa-basket-shopping"></i>
 
               <div class="text">
@@ -207,7 +207,7 @@
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-md-4 justify-content-around d-flex para">
+            <div class="col-md-4 d-flex align-items-center flex-row">
               <p>&copy; Copyrights 2014</p>
             </div>
             <div class="col-md-4 d-flex">
