--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 d-none d-lg-block">
+              <div class="col-lg-4 d-lg-block">
                 <div class="card">
                   <img
                     src="https://images.pexels.com/photos/4068294/pexels-photo-4068294.jpeg?auto=compress&cs=tinysrgb&w=600"
@@ -142,7 +142,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 d-none d-lg-block">
+              <div class="col-lg-4 d-lg-block">
                 <div class="card">
                   <img
                     src="https://images.pexels.com/photos/1018134/pexels-photo-1018134.jpeg?auto=compress&cs=tinysrgb&w=600"
@@ -172,7 +172,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 d-none d-lg-block">
+              <div class="col-lg-4 d-lg-block">
                 <div class="card">
                   <img
                     src="https://images.pexels.com/photos/4067759/pexels-photo-4067759.jpeg?auto=compress&cs=tinysrgb&w=600"
@@ -185,7 +185,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 d-none d-lg-block">
+              <div class="col-lg-4 d-lg-block">
                 <div class="card">
                   <img
                     src="https://images.pexels.com/photos/8533218/pexels-photo-8533218.jpeg?auto=compress&cs=tinysrgb&w=600"
@@ -207,10 +207,10 @@
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-md-4 d-flex align-items-center flex-row">
+            <div class="col-lg-4 d-flex align-items-center flex-row">
               <p>&copy; Copyrights 2014</p>
             </div>
-            <div class="col-md-4 d-flex">
+            <div class="col-md-4">
               <ul class="list-inline">
                 <li class="list-inline-item">
                   <a href="https://pl-pl.facebook.com/" aria-label="Facebook">
