--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="navbar-wrap">
-      <nav class="navigation">
+      <nav class="navigation col-sm-4">
         <div class="container">
           <img
             class="logo-header"
