Add media query

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   </head>
   <body>
     <div class="navbar-wrap">
-      <nav class="navigation col-sm-4">
+      <nav class="navigation">
         <div class="container">
           <img
             class="logo-header"
             src="https://www.freepnglogos.com/uploads/crown-logo-30.png"
             alt="logo"
           />
-          <ul>
+          <ul class="d-flex justify-content-end">
             <li><a href="#">HOME</a></li>
             <li><a href="#">SERVICES</a></li>
             <li><a href="#">PORTFOLIO</a></li>
@@ -44,7 +44,6 @@
           </ul>
         </div>
       </nav>
-
       <header class="splash">
         <div class="splash-inner">
           <h2 class="page-title">Welcome to our studio!</h2>
@@ -53,7 +52,6 @@
         </div>
       </header>
     </div>
-
     <section>
       <div class="container">
         <div class="row">
@@ -64,7 +62,6 @@
         </div>
       </div>
     </section>
-
     <section class="ordering py-5">
       <div class="container">
         <div class="row">
@@ -80,7 +77,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-lg-4">
             <div class="box p-3 mb-3 d-flex align-items-center flex-column">
               <i class="fa-solid fa-basket-shopping"></i>
@@ -96,7 +92,6 @@
           <div class="col-lg-4">
             <div class="box p-3 mb-3 d-flex align-items-center flex-column">
               <i class="fa-solid fa-basket-shopping"></i>
-
               <div class="text">
                 <h3>E-Commerce</h3>
                 <p>
@@ -110,92 +105,86 @@
       </div>
     </section>
     <section class="portfolio">
-      <div class="container">
-        <div class="row">
-          <h1>OUR PORTFOLIO</h1>
-          <p class="p-services">Proin iaculis purus consequat sem cure.</p>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="card">
-                  <img
-                    src="https://images.pexels.com/photos/53874/pexels-photo-53874.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="card-img-top"
-                    alt="Waterfall"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Ebony and Ivory</h5>
-                    <p class="card-text">Branding</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 d-lg-block">
-                <div class="card">
-                  <img
-                    src="https://images.pexels.com/photos/4068294/pexels-photo-4068294.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="card-img-top"
-                    alt="Sunset Over the Sea"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Smart Stationary</h5>
-                    <p class="card-text">Print Design</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 d-lg-block">
-                <div class="card">
-                  <img
-                    src="https://images.pexels.com/photos/1018134/pexels-photo-1018134.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="card-img-top"
-                    alt="Sunset over the Sea"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Clever Poster</h5>
-                    <p class="card-text">Print Design</p>
-                  </div>
+      <div class="row">
+        <h1>OUR PORTFOLIO</h1>
+        <p class="p-services">Proin iaculis purus consequat sem cure.</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-sm-6">
+              <div class="card">
+                <img
+                  src="https://images.pexels.com/photos/53874/pexels-photo-53874.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="card-img-top"
+                  alt="Waterfall"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Ebony and Ivory</h5>
+                  <p class="card-text">Branding</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="card">
-                  <img
-                    src="https://images.pexels.com/photos/8971020/pexels-photo-8971020.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="card-img-top"
-                    alt="Waterfall"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Ebony and Ivory</h5>
-                    <p class="card-text">Branding</p>
-                  </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="card">
+                <img
+                  src="https://images.pexels.com/photos/4068294/pexels-photo-4068294.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="card-img-top"
+                  alt="Sunset Over the Sea"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Smart Stationary</h5>
+                  <p class="card-text">Print Design</p>
                 </div>
               </div>
-              <div class="col-lg-4 d-lg-block">
-                <div class="card">
-                  <img
-                    src="https://images.pexels.com/photos/4067759/pexels-photo-4067759.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="card-img-top"
-                    alt="Sunset Over the Sea"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Smart Stationary</h5>
-                    <p class="card-text">Print Design</p>
-                  </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="card">
+                <img
+                  src="https://images.pexels.com/photos/1018134/pexels-photo-1018134.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="card-img-top"
+                  alt="Sunset over the Sea"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Clever Poster</h5>
+                  <p class="card-text">Print Design</p>
                 </div>
               </div>
-              <div class="col-lg-4 d-lg-block">
-                <div class="card">
-                  <img
-                    src="https://images.pexels.com/photos/8533218/pexels-photo-8533218.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="card-img-top"
-                    alt="Sunset over the Sea"
-                  />
-                  <div class="card-body">
-                    <h5 class="card-title">Clever Poster</h5>
-                    <p class="card-text">Print Design</p>
-                  </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="card">
+                <img
+                  src="https://images.pexels.com/photos/8971020/pexels-photo-8971020.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="card-img-top"
+                  alt="Waterfall"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Ebony and Ivory</h5>
+                  <p class="card-text">Branding</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="card">
+                <img
+                  src="https://images.pexels.com/photos/4067759/pexels-photo-4067759.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="card-img-top"
+                  alt="Sunset Over the Sea"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Smart Stationary</h5>
+                  <p class="card-text">Print Design</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="card">
+                <img
+                  src="https://images.pexels.com/photos/8533218/pexels-photo-8533218.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="card-img-top"
+                  alt="Sunset over the Sea"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Clever Poster</h5>
+                  <p class="card-text">Print Design</p>
                 </div>
               </div>
             </div>
