Add media query

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             src="https://www.freepnglogos.com/uploads/crown-logo-30.png"
             alt="logo"
           />
-          <ul class="d-flex justify-content-end">
+          <ul class="menu d-flex flex-column justify-content-end">
             <li><a href="#">HOME</a></li>
             <li><a href="#">SERVICES</a></li>
             <li><a href="#">PORTFOLIO</a></li>
@@ -196,10 +196,10 @@
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 d-flex align-items-center flex-row">
+            <div class="col-sm-4">
               <p>&copy; Copyrights 2014</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-8">
               <ul class="list-inline">
                 <li class="list-inline-item">
                   <a href="https://pl-pl.facebook.com/" aria-label="Facebook">
