--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             src="https://www.freepnglogos.com/uploads/crown-logo-30.png"
             alt="logo"
           />
-          <ul class="menu d-flex flex-column justify-content-end">
+          <ul
+            class="menu d-flex flex-column flex-sm-row align-items-end justify-content-end"
+          >
             <li><a href="#">HOME</a></li>
             <li><a href="#">SERVICES</a></li>
             <li><a href="#">PORTFOLIO</a></li>
